Added docker-compose file. Added onteon configuration and distribution. Added tomcat configuration. Updated urls.

--- a/monolith/src/main/resources/templates/index.html
+++ b/monolith/src/main/resources/templates/index.html
@@ -114,7 +114,7 @@
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
 <script>
-    const baseUrl = '/monolith';
+    const baseUrl = '/_by_name/monolith';
     const companyApiBaseUrl = `${baseUrl}/api/v1/companies`;
     const productApiBaseUrl = `${baseUrl}/api/v1/products`;
     const reportApiBaseUrl = `${baseUrl}/api/v1/reports`;
