--- a/report/pom.xml
+++ b/report/pom.xml
@@ -45,6 +45,11 @@
             <artifactId>openpdf</artifactId>
             <version>1.3.27</version>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>2.7.5</version>
+        </dependency>
 
         <dependency>
             <groupId>org.postgresql</groupId>
